--- a/assets/css/units/site-header.css
+++ b/assets/css/units/site-header.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 5;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
